--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
+.netrwhist
+npm-debug.log
+
+plug.vim.old
+
+config/nvim/spell
+config/nvim/shada
 config/nvim/plugged
+vim/vim.symlink/spell/
+vim/vim.symlink/plugged/
+
